--- a/src/templates/dev-project-template.scss
+++ b/src/templates/dev-project-template.scss
@@ -38,9 +38,6 @@
 }
 
 .template-body-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
